--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "uniqid": "^5.0.3"
   }
 }
