--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongodb": "^3.2.7",
+    "mongoose": "^5.6.3",
     "mysql2": "^1.6.5",
     "prettier": "^1.18.2",
     "pug": "^2.0.3",
