--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.3",
     "mysql2": "^1.6.5",
