--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "homepage": "https://github.com/MikevPeeren/Learning-Node#readme",
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^5.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react": "^7.14.2",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
@@ -34,16 +34,18 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.2.0",
     "csurf": "^1.10.0",
-    "ejs": "^2.6.1",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "lodash": "^4.17.14",
     "mongodb": "^3.2.7",
-    "mongoose": "^5.6.3",
+    "mongoose": "^5.6.4",
     "mysql2": "^1.6.5",
+    "npm-check-updates": "^3.1.20",
     "prettier": "^1.18.2",
-    "pug": "^2.0.3",
-    "sequelize": "^5.8.9",
+    "pug": "^2.0.4",
+    "sequelize": "^5.10.1",
     "uniqid": "^5.0.3"
   }
 }
